--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Barbearia Senna - Mude com apenas um corte.</title>
 </head>
 <body>
     <header>
         <a href="index.html">
-            <img src="assets/image/logo.png" alt="">
+            <img src="logo.png" alt="">
         </a>
         <nav class="navbar">
             <a href="#inicio">Inicio</a>
@@ -22,7 +22,7 @@
 
     <main>
         <section id="inicio">
-            <img src="assets/image/foto1.jpg" alt="">
+            <img src="foto1.jpg" alt="">
             <h1>Seja Bem-Vindo a Barbearia Senna</h1>
             <p>Mude seu estilo com apenas um corte.</p>
             <div class="botoes">
